--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ html, body {
 
   <!-- RIGHT CONTENT -->
   <div class="content-section">
-  <div class="step">05.</div>
+  <div class="step"></div>
 
   <!-- IT CLUB LOGO -->
   <img 
@@ -242,4 +242,5 @@ html, body {
 
 </body>
 </html>
+
 
